k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: serenity-client-service
  namespace: serenity-dev
spec:
  selector:
    app: serenity-client
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
